--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
-* linguist-language=Python
-core/* linguist-vendored
-lib/lxml/* linguist-vendored=false
+core/* linguist-language=Python
+lib/* linguist-detectable=true
+modules/* linguist-language=Python
+runon.sh linguist-detectable=true
+dependencies linguist-detectable=true
