--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,6 @@ lib/* linguist-detectable=Python
 modules/* linguist-language=Python
 runon.sh linguist-detectable=true
 dependencies linguist-detectable=true
+tmp/* linguist-vendored
+tools/* linguist-language=Python
+doc/* linguist-vendored
