--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,16 @@ group: travis_latest
 language: python
 cache: pip
 matrix:
-  #allow_failures:
-  #  - python: 3.7
+  allow_failures:
+    - python: 3.7
   include:
     - python: 2.7
     #- python: 3.4
     #- python: 3.5
     #- python: 3.6
-  #  - python: 3.7
-  #    dist: xenial    # required for Python 3.7 (travis-ci/travis-ci#9069)
-  #    sudo: required  # required for Python 3.7 (travis-ci/travis-ci#9069)
+    - python: 3.7
+      dist: xenial    # required for Python 3.7 (travis-ci/travis-ci#9069)
+      sudo: required  # required for Python 3.7 (travis-ci/travis-ci#9069)
 install:
   # - pip install -r requirements.txt
   - pip install flake8
