--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,10 +7,13 @@ RUN apt-get update && \
       libncurses5 \
       libxml2 \
       nmap \
+      git \
       tcpdump  \
       libexiv2-dev \
       build-essential \
       python-xmpp \
+      python-pip \
+      libmysqlclient-dev \
     && \
     rm -rf /var/lib/apt/lists/* && \
     apt-get clean
@@ -20,7 +23,5 @@ RUN git clone https://github.com/0xinfection/tidos-framework.git && \
     cd tidos-framework && \
     pip2 install -r requirements.txt && \
     chmod +x install && \
-    echo -e '\n' | ./install
-
-# Removing TIDoS-Framework installer files
-RUN cd .. && rm -rf tidos-framework
+    echo -e '\n' | ./install && \
+    cd .. && rm -rf tidos-framework
