'Updated .travis.yml'

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,5 @@ script:
 notifications:
   on_success: change
   on_failure: change  # `always` will be the setting once code changes slow down
+
+# Added comment - 
